# okami-d3d12

./: CMakeLists.txt  CMakePresets.json  aabb_tree.hpp  assert.hpp  assets.cpp  assets.hpp  camera.cpp  camera.hpp  common.hpp  config.cpp  config.hpp  d3d12_common.cpp  d3d12_common.hpp  d3d12_descriptor_pool.cpp  d3d12_descriptor_pool.hpp  d3d12_geometry.cpp  d3d12_geometry.hpp  d3d12_imgui.cpp  d3d12_imgui.hpp  d3d12_mesh.cpp  d3d12_mesh.hpp  d3d12_mesh_formats.cpp  d3d12_mesh_formats.hpp  d3d12_primitive_renderer.cpp  d3d12_primitive_renderer.hpp  d3d12_renderer.cpp  d3d12_sprite.cpp  d3d12_sprite.hpp  d3d12_static_mesh.cpp  d3d12_static_mesh.hpp  d3d12_texture.cpp  d3d12_texture.hpp  d3d12_triangle.cpp  d3d12_triangle.hpp  d3d12_upload.cpp  d3d12_upload.hpp  d3d12_upload2.cpp  d3d12_upload2.hpp  engine.cpp  engine.hpp  (+22 more)
.github/workflows/: ci.yml
assets/: test.gltf
config/: default.yaml
d3d12/: d3d12_common.cpp  d3d12_common.hpp  d3d12_descriptor_pool.cpp  d3d12_descriptor_pool.hpp  d3d12_geometry.cpp  d3d12_geometry.hpp  d3d12_imgui.cpp  d3d12_imgui.hpp  d3d12_mesh_formats.cpp  d3d12_mesh_formats.hpp  d3d12_renderer.cpp  d3d12_sprite.cpp  d3d12_sprite.hpp  d3d12_static_mesh.cpp  d3d12_static_mesh.hpp  d3d12_texture.hpp  d3d12_triangle.cpp  d3d12_triangle.hpp  d3d12_upload.hpp
shaders/: common.fxh  cpp.fxh  im3d_common.hlsl  im3d_lines.hlsl  im3d_points.hlsl  im3d_triangles.hlsl  sprite.fxh  sprite.hlsl  static_mesh.hlsl  test.hlsl  triangle.hlsl
tests/: README.md  aabb_tree_test.cpp  benchmark_test.cpp  d3d12_uploader.cpp  d3d12_uploader_test.cpp  d3d12_utils.cpp  d3d12_utils.hpp  engine_test.cpp  entity_tree_test.cpp  geometry_test.cpp  integration_test.cpp  physics_test.cpp  renderer_test.cpp  utils.cpp  utils.hpp  world_test.cpp
